--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     <div class="_variable_20b187 group/spotlight relative">
 
         <!--scroll effect-->
-
-        <div class="mx-auto min-h-screen max-w-screen-xl px-6 py-12 font-sans md:px-12 md:py-20 lg:px-24 lg:py-0">
+        <div class="pointer-events-none fixed inset-0 z-30 transition duration-300 lg:absolute">
+        </div>
+        <!-- ==============CODING START=============-->
+        <div class="mx-0 min-h-screen max-w-screen-xl px-6 py-12 font-sans md:px-12 md:py-20 lg:px-24 lg:py-0">
 
             <div class="lg:flex lg:justify-between lg:gap-4">
 
                 <!-- HEADER SECTION -->
+
                 <header class="profile container lg:sticky lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
                     <div>              
                         <div class="profile__container grid">
@@ -34,7 +37,7 @@
                                 <h2 class="profile__name font-bold tracking-tighter text-slate-200 sm:text-5xl">Felix Kibui</h2>
                                 <h3 class="profile__profession mt-1 text-lg font-medium tracking-tight text-slate-400 sm:text-xl">Software Engineer</h3>
 
-                            <p class="mt-1 max-w-xs leading-normal">Make it work, make it right, make it fast</p>
+                            <p class="mt-1 max-w-xs leading-normal">There is always one more bug to fix.</p>
                     
                                 <ul class="profile__social flex items-center shrink-0">
                                     <a href="https://www.linkedin.com/in/felix-wachira-6639912b7" target="_blank" class="profile__social-link">
