--- a/index.html
+++ b/index.html
@@ -24,12 +24,7 @@
 
                 <!-- HEADER SECTION -->
 
-                <header class="profile container 
-
-                mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24">
-                    <div class=" -mx-6 mb-4 w-screen  px-6 py-5 md:-mx-12 md:px-12  lg:mx-auto  lg:px-0
-                
-                lg:sticky lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24">
+                <header class="profile container lg:sticky lg:top-0 lg:flex lg:max-h-screen lg:w-1/2 lg:flex-col lg:justify-between lg:py-24 md:-mx-12 md:px-12 ">
                     <div>              
                         <div class="profile__container grid">
                             <div class="profile__data">
