--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                                 </div>
                     
                                 <h2 class="profile__name font-bold tracking-tighter text-slate-200 sm:text-5xl">Felix Kibui</h2>
-                                <h3 class="profile__profession mt-1 text-lg font-medium tracking-tight text-slate-400 sm:text-xl">Software Engineer</h3>
+                                <h3 class="profile__profession mt-1 text-lg font-medium tracking-tight text-slate-400 sm:text-xl ">Software Engineer</h3>
 
-                            <p class="mt-1 max-w-xs leading-normal">There is always one more bug to fix.</p>
+                            <p class=" description mt-1 max-w-xs leading-normal text-slate-600">There is always one more bug to fix.</p>
                     
                                 <ul class="profile__social flex items-center shrink-0">
                                     <a href="https://www.linkedin.com/in/felix-wachira-6639912b7" target="_blank" class="profile__social-link">
