--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
                 <!-- EXPERIENCE SECTION -->
 
                 <section id="experience" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24">
-                    <div>
-                        <h2 class="text-sm font-bold uppercase tracking-widest text-sky-200">Experience</h2>
+                    <div
+                     class="sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0">
+                            <h2 class="text-sm font-bold uppercase tracking-widest text-sky-200 lg:sr-only ">Experience</h2>
                     </div>
                     <div>
                         <ol class="group/list">
@@ -261,10 +262,12 @@
                 </section>
 
                 <!-- Projects Section-->
-                <section id="project" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24"> 
-                    <div>
-                        <h2 class="text-sm font-bold uppercase tracking-widest text-sky-200">Projects</h2>
+                <section id="project" class="mb-16 scroll-mt-16 md:mb-24 lg:mb-36 lg:scroll-mt-24">
+                    <div
+                     class="sticky top-0 z-20 -mx-6 mb-4 w-screen bg-slate-900/75 px-6 py-5 backdrop-blur md:-mx-12 md:px-12 lg:sr-only lg:relative lg:top-auto lg:mx-auto lg:w-full lg:px-0 lg:py-0 lg:opacity-0">
+                            <h2 class="text-sm font-bold uppercase tracking-widest text-sky-200 lg:sr-only ">Projects</h2>
                     </div>
+            
                     <div>
                         <!-- Projects Cards -->
                         <ul class="group/list">
@@ -275,8 +278,6 @@
                                 </div>
                                 <div class="z-10 sm:order-2 sm:col-span-6">
                                     <h3 class="font-medium leading-snug text-slate-200">
-                                        <div>
-                                            <h3 class="font-medium leading-snug text-slate-200">
                                                 <div>
                                                     <a href="#" class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300 group/link text-base" href="_blank"
                                                     rel="noreferrer noopener"
@@ -294,22 +295,13 @@
                                                         </span>
             
                                                     </a>
-                                                </div>           
-                                                <p class="mt-2 text-sm leading-normal text-slate-500">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint dolores facilis suscipit harum nihil iste nobis, et alias consequatur. Fugit omnis consequatur in odit veniam incidunt porro et quam enim.
-                                                </p>                                 
-                                                <ul class="mt-2 flex flex-wrap">
-                                                    <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300">Javascript</div>
-                                                    </li>
-                                                    <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300">HTML &amp CSS</div>
-                                                    </li>
-                                                    <li class="mr-1.5 mt-2"><div class="flex items-center rounded-full bg-teal-400/10 px-3 py-1 text-xs font-medium leading-5 text-teal-300">C++</div>
-                                                    </li>
-                                                </ul>
-                                            </h3>
-                                    </a>
+                                                </div>  
+                                    </h3> 
+                                      <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste porro, praesentium labore explicabo beatae temporibus, expedita in ut obcaecati quae perferendis laboriosam distinctio quas laborum eos modi cupiditate vitae molestiae?
+                                      </p>                   
                                 </div>
-                            </h3>
-                                </div>
+                                <img src="./assets/projimg/drawingApp.png"
                             </li>
                         </ul>
                     </div>
