--- a/index.html
+++ b/index.html
@@ -298,10 +298,10 @@
                                                 </div>  
                                     </h3> 
                                       <p>
-                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste porro, praesentium labore explicabo beatae temporibus, expedita in ut obcaecati quae perferendis laboriosam distinctio quas laborum eos modi cupiditate vitae molestiae?
+                                        I built a simple <span>Drawing/Painting App</span> using HTML, CSS and Javascript
                                       </p>                   
                                 </div>
-                                <img src="./assets/projimg/drawingApp.png"
+                                <img src="./assets/projimg/drawingApp.png" alt="">
                             </li>
                         </ul>
                     </div>
