--- a/index.html
+++ b/index.html
@@ -279,13 +279,11 @@
                                 <div class="z-10 sm:order-2 sm:col-span-6">
                                     <h3 class="font-medium leading-snug text-slate-200">
                                                 <div>
-                                                    <a href="#" class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300 group/link text-base" href="_blank"
-                                                    rel="noreferrer noopener"
+                                                    <a href="https://fkibui7.github.io/Drawing-PaintingApp/" class="inline-flex items-baseline font-medium leading-tight text-slate-200 hover:text-teal-300 focus-visible:text-teal-300 group/link text-base" target="_blank"
                                                     aria-label="Lead Engineer at Andela (opens in a new tab)">
                                                         <span class="absolute -inset-x-4 inset-y-2.5 hidden md:-inset-x-6 md:-inset-y-4 lg:block">
                                                         </span>
-            
-                                                        <span>Build a Drawing/Painting 
+                                                        <span>A Drawing/Painting 
                                                             <span class="inline-block">
                                                                 App<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="inline-block h-4 w-4 shrink-0 transition-transformgroup-hover/link:-translate-y-1 group-hover/link:translate-x-1 group-focus-visible/link:-translate-y-1 group-focus-visible/link:translate-x-1 motion-reduce:transition-none ml-1 translate-y-px" aria-hidden="true">
                                                                     <path fill-rule="evenodd" d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" clip-rule="evenodd">
@@ -298,7 +296,7 @@
                                                 </div>  
                                     </h3> 
                                       <p>
-                                        I built a simple <span>Drawing/Painting App</span> using HTML, CSS and Javascript
+                                        I built a simple <span class="font-medium text-slate-200">Drawing/Painting App</span> using HTML, CSS and Javascript
                                       </p>                   
                                 </div>
                                 <img src="./assets/projimg/drawingApp.png" alt="">
