--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     rel="stylesheet"/>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" href="./assets/flogo.png">
+    <script src="app.js"></script>
 </head>
 <body class="bg-slate-900 leading-relaxed text-slate-400 antialiased selection:text-teal-900">
 
@@ -424,9 +425,11 @@
                 </main>
             </div>
             </div>
-
         </div>
     </div>
-    
+    <!--=========== CURSOR EFFECT============-->
+    <div class="cursor-anim">
+
+    </div>
 </body>
 </html>
